--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -8,18 +8,6 @@ $footer_font_family: "OpenSans-Regular";
 
 
 
-// footer{
-//     font-family: $footer_font_family, Arial, Helvetica, sans-serif;
-//     font-weight: 400;
-//     letter-spacing: 1.3px;
-//     background-color: $bg_color_footer;
-//     text-align: center;
-//     // min-height: 100%;
-//     // parallax
-
-// }
-
-
 .footer{
 
     font-family: $footer_font_family, Arial, Helvetica, sans-serif;
@@ -45,6 +33,7 @@ $footer_font_family: "OpenSans-Regular";
         height: 100%;
        
         box-sizing: border-box;
+        padding: 0 10px;
     }
 
     
@@ -71,6 +60,7 @@ $footer_font_family: "OpenSans-Regular";
             width: 57px;
             height: 57px;
             display: block;
+            z-index: 51;
             
             }
     }
