--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -8,24 +8,24 @@ $colorOne: rgb(47, 46, 46);
     top: 0;
     width: 100%;
     z-index: 50;
-    height: 81px;
+    min-height: 81px;
     background-color: $white;
     transform-style: preserve-3d; 
+    opacity: 1;
   
     &_row{
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 80px;
+        min-height: 80px;
     }
-    &_menu{     
-    }
+
 }
 
 .menu {
-    &_burger{}
+
     &_body{
-        width: 980px;
+        max-width: 980px;
     }
     &_list{
         display: flex;
@@ -56,7 +56,7 @@ $colorOne: rgb(47, 46, 46);
         font-weight: 400;
         text-transform: uppercase;
         font-size: 14px; 
-        line-height: 31px;
+        line-height: 220%;
         display: block;
         width: 100%;
         box-sizing: padding-box;
@@ -69,3 +69,167 @@ $colorOne: rgb(47, 46, 46);
     border: 2px solid $colorOne;
 }
 
+
+@media (max-width: 992px) {
+    .menu {
+        &_list{
+            display: flex;
+            flex-wrap: wrap;
+            li{
+                flex: 1 0 25%;
+                margin: 15px 15px;
+            }
+        }
+        &_link{
+            padding: 0px;
+        }
+        &_body{
+            padding: 0 10px;
+        }
+    }
+}
+// @media (max-width: 639px) {
+//     .menu {
+//         &_list{
+//             display: flex;
+//             flex-wrap: wrap;
+//         }
+//             li{
+//                 flex: 1 0 33.333%;
+//                 margin-top: -5px;
+//             }
+//         &_link{
+//             padding: 0px;
+//         }
+//         &_body{
+//             padding: 15px 10px 0px 10px;
+//         }
+//     }
+// }
+// @media (max-width: 479px) {
+//     .menu {
+//         &_list{
+//             display: flex;
+//             flex-wrap: wrap;
+//         }
+//             li{
+//                 flex: 1 0 50%;
+//                 margin: 15px 15px;
+//             }
+//         &_link{
+//             padding: 0px;
+//         }
+//         &_body{
+//             padding: 0 25px;
+//         }
+//     }
+// }
+
+
+//burger_________________________________
+//________________________________________
+
+.menu .burger{
+    display: none;
+}
+@media (max-width:767px) {
+    .menu .burger{
+        display: block;
+        width: 40px;
+        height: 30px;
+        z-index: 5;
+        position: relative;
+        cursor: pointer;
+        left: 82%;
+        padding: 10px;
+
+
+        span, &::after, &::before {
+            left: 0;
+            height: 10%;
+            width: 100%;
+            position: absolute;
+            display: block;
+            background-color:$colorOne;
+            z-index: 6;
+            padding: 1px;
+        }
+        span{
+            top: 50%;
+            transform: scale(1) translate(0, -50%);
+        }
+
+    }
+
+    .burger::after{
+        content: "";
+        bottom: 0;
+    }
+    .burger::before{
+        content: "";
+        top: 0;
+    }
+
+    .menu_body{
+        position: fixed;
+        overflow: auto;
+        top: 0;
+        left: -100%;
+        // left: 0;
+
+        width: 100%;
+        height: 100%;
+        background-color: $background_color;
+        padding: 100px 30px 30px 30px;
+        transition: left 0.3s ease 0s;
+        // z-index: 333;
+        &::before{
+            content: "";
+            width: 100%;
+            top: 0;
+            left: 0;
+            height: 81px;
+            background-color: $background_color;
+            position: fixed;
+            z-index: 3;
+        }
+    }
+    .menu_body._active{
+        left: 0;
+    }
+    .menu_list li:not(:last-child){
+        padding: 0 0 10px 0;
+        
+    }
+    .menu_link{
+        font-size: 24px;
+        line-height: 170%;
+    }
+    .menu_list{
+        display: block;
+        position: relative;
+
+        li div{
+            border-color: $background_color;
+            
+        }
+    }
+    header{   
+        // height: 100%;  
+        overflow: hidden; 
+    }
+    .header_menu{
+        width: 100%;
+    }
+    
+}
+
+.hidden_head .menu_body::before {
+    top: -100%;
+    transition: top ease 0.3s 0s;
+
+}
+.hidden_head{
+    top: -100%;
+    transition: top ease 0.7s 0s;
+}
