--- a/#src/scss/static_bg_photo.scss
+++ b/#src/scss/static_bg_photo.scss
@@ -5,18 +5,12 @@ $white: #fff;
 .static_bg_photo{
     position: relative;
     flex: 1 0 auto;
-    // overflow: visible;
     &_row{
-        
-        min-width: 980px;
         min-height: 898px;
-    
         display: flex;
         justify-content: center;
         width: 100%;  //?
         height: 898px;
-
-
         &_photo{
             background: fixed url(../img/static_bg_photo.webp) no-repeat;
             background-size: cover;
@@ -26,22 +20,15 @@ $white: #fff;
             position: relative;
 
         }
-
         &_container_H4{
-            
-            min-width: 980px;
-            width: 100vw;
-              
+            width: 100vw;  
         }
-
         &_H4{
             width: 603px;
             height: 174px;
             position: relative;
             margin: 650px 0px 10px calc((100% - 980px) * 0.5);
             left: 39px;
-
-            
             &_text{
                 font-size: 45px;
                 color: $white;
@@ -59,3 +46,104 @@ $white: #fff;
     }
 }
 
+
+@media (max-width:992px) {
+    .static_bg_photo {
+        height: 798px;
+        &_row{
+            height: 798px;
+            min-height: 798px;
+            &_container_H4{
+                display: flex;
+                justify-content: center;
+                align-items: flex-end;
+                height: 100%;
+            }
+            &_H4{
+                margin: 0 0 65px 0;
+                left: 0;
+
+                &_text{
+                    padding: 10px;
+                    display: inline-block;
+                    text-align: justify;
+                    font-size: 40px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 639px) {
+    .static_bg_photo {
+        height: 698px;
+        &_row{
+            height: 698px;
+            min-height: 698px;
+            &_H4{
+                padding: 10px;
+                margin: 0 0 40px 0;
+                &_text{
+                    padding: 9px;
+                    font-size: 37px;
+                    text-align: start;
+                }
+            }
+        }
+    }
+    
+}
+@media (max-width: 511px) {
+    .static_bg_photo {
+        height: 558px;
+        &_row{
+            height: 558px;
+            min-height: 558px;
+            &_H4{
+                margin: 0 0 25px 0;
+                &_text{
+                    padding: 7px;
+                    font-size: 32px;
+                }
+            }
+        }
+    }
+    
+}
+
+@media (max-width: 450px) {
+    .static_bg_photo_row_H4_text{
+        font-size: 26px;
+    } 
+    .static_bg_photo_row_H4{
+        margin: 0 0 10px 0;
+    }
+}
+
+@media (max-width: 365px) {
+    .static_bg_photo_row_H4_text{
+        font-size: 21px;
+        padding: 5px;
+        line-height: 150%;
+    }
+    .static_bg_photo_row_H4{
+        margin: 0 0 -5px 0;
+    }
+    .static_bg_photo{
+        height: 458px;
+    }
+    .static_bg_photo_row{
+        height: 458px;
+        min-height: 458px;
+    }
+}
+
+@media (max-width: 300px) {
+    .static_bg_photo_row_H4_text{
+        font-size: 19px;
+        padding: 5px;
+    }
+    .static_bg_photo_row_H4{
+        margin: 0 0 -15px 0;
+    }
+}
